Cancel button changed appearance

--- a/OpenBio/app/static/app/konstantina/css/style.css
+++ b/OpenBio/app/static/app/konstantina/css/style.css
@@ -369,6 +369,14 @@ nav {
     background-color: transparent;
 }
 
+.cancelButton {
+    margin-top: -36px; 
+    height: 46px; 
+    right: -10px; 
+    margin-bottom: -2px; 
+    padding-top: 5px;
+}
+
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
 /* ------------------------------------------------------------------------ Pushpin with Scrollspy ------------------------------------------------------------------------------ */
