--- a/OpenBio/app/templates/app/right_panel.html
+++ b/OpenBio/app/templates/app/right_panel.html
@@ -9,7 +9,7 @@
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
                 <h5 class="rightPanelTitleHeader">Tool/Data</h5>
-                <a id="tool_cancel_button_id" class="waves-effect btn-flat right" style="margin-top: -30px;" ng-click="tools_button_cancel_clicked()">Cancel</a>
+                <a id="tool_cancel_button_id" class="waves-effect btn-flat white-text red lighten-2 right tooltipped cancelButton" data-position="bottom" data-tooltip="Close this Tool/Data" ng-click="tools_button_cancel_clicked()">Close</a>
             </div>
         </div>
         <div style="margin: 20px;">
@@ -423,7 +423,7 @@
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
                 <h5 class="rightPanelTitleHeader">Workflow</h5>
-                <a id="workflow_cancel_button_id" class="waves-effect btn-flat right" style="margin-top: -30px;" ng-click="workflows_button_cancel_clicked()">Cancel</a>
+                <a id="workflow_cancel_button_id" class="waves-effect btn-flat white-text red lighten-2 right tooltipped cancelButton" data-position="bottom" data-tooltip="Close this Workflow" ng-click="workflows_button_cancel_clicked()">Close</a>
             </div>
         </div>
         <div style="margin: 20px;">
@@ -822,7 +822,7 @@
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
                 <h5 class="rightPanelTitleHeader">Report</h5>
-                <a class="waves-effect btn-flat right" style="margin-top: -30px;">Cancel</a>
+                <a class="waves-effect btn-flat white-text red lighten-2 right tooltipped cancelButton" data-position="bottom" data-tooltip="Close this Report">Close</a>
             </div>
         </div>
         <div style="margin: 20px;">
@@ -1012,7 +1012,7 @@
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
                 <h5 class="rightPanelTitleHeader">Reference</h5>
-                <a class="waves-effect btn-flat right" style="margin-top: -30px;" ng-click="references_button_cancel_clicked()">Cancel</a>
+                <a class="waves-effect btn-flat white-text red lighten-2 right tooltipped cancelButton" data-position="bottom" data-tooltip="Close this Reference" ng-click="references_button_cancel_clicked()">Close</a>
             </div>
         </div>
         <div style="margin: 20px;">
@@ -1316,7 +1316,7 @@
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
                 <h5 class="rightPanelTitleHeader">Q & A</h5>
-                <a class="waves-effect btn-flat right" style="margin-top: -30px;" ng-click="qas_button_cancel_clicked()">Cancel</a>
+                <a class="waves-effect btn-flat white-text red lighten-2 right tooltipped cancelButton" data-position="bottom" data-tooltip="Close this Q & A" ng-click="qas_button_cancel_clicked()">Close</a>
             </div>
         </div>
         <div style="margin: 20px;">
