--- a/OpenBio/app/templates/app/profile.html
+++ b/OpenBio/app/templates/app/profile.html
@@ -146,16 +146,16 @@
                 <!-- ----------------------------- Access token Card --------------------------------------- -->
                 <!-- --------------------------------------------------------------------------------------- -->
                 <div class="col s12">
-                    <section id="accessToknCard" class="scrollspy section_projet">
+                    <section id="accessTokenCard" class="scrollspy section_projet">
                         <div class="card">
                             <div class="card-content">
                                 <div class="row">
                                     <blockquote><span class="card-title">Access Token</span></blockquote>
                                     <p style="padding-left: 0.7rem;">Manage your access tokens</p>
-                                    Access token: <span ng-bind="profile_access_token ? profile_access_token : 'Acess token is not set'"></span>
-                                    <button ng-click="profile_delete_access_token()" ng-show="profile_access_token">Delete</button>
-                                    <button ng-click="profile_issue_access_token()" ng-show="profile_access_token">Renew</button>
-                                    <button ng-click="profile_issue_access_token()" ng-show="!profile_access_token">Create</button>
+                                    Access token: <span id="access_token_span" ng-bind="profile_access_token ? profile_access_token : 'Acess token is not set'"></span>
+                                    <button id="at_delete" ng-click="profile_delete_access_token()" ng-show="profile_access_token">Delete</button>
+                                    <button id="at_renew" ng-click="profile_issue_access_token()" ng-show="profile_access_token">Renew</button>
+                                    <button ud="at_create" ng-click="profile_issue_access_token()" ng-show="!profile_access_token">Create</button>
                                 </div>
                             </div>
                         </div>
